--- a/web/index.html
+++ b/web/index.html
@@ -1,17 +1,32 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>KNWifiMap</title>
+
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/bootstrap-theme.min.css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
   <link rel="stylesheet" href="css/MarkerCluster.css" />
   <link rel="stylesheet" href="css/MarkerCluster.Default.css" />
   <link rel="stylesheet" href="wifimap.css" />
 
+  <script src="js/jquery-3.1.1.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
   <script src="https://unpkg.com/leaflet@1.0.1/dist/leaflet.js"></script>
   <script src="js/leaflet.markercluster.js"></script>
-  <script src="js/jquery-3.1.1.min.js"></script>
+
   <script src="wifimap.js"></script>
 </head>
 <body>
+  <nav class="navbar navbar-default">
+    <div class="container">
+      <h1>Konstanz Wifi Map <small>Mapping the networks of Konstanz</small></h1>
+    </div>
+  </nav>
   <div id="mapid"></div>
 </body>
 </html>
