--- a/web/index.html
+++ b/web/index.html
@@ -24,7 +24,7 @@
 <body>
   <nav class="navbar navbar-default">
     <div class="container">
-      <h1>Konstanz Wifi Map <small>Mapping the networks of Konstanz</small></h1>
+      <h1>KNWifiMap <small>Mapping the networks of Konstanz</small></h1>
     </div>
   </nav>
   <div id="mapid"></div>
