Split networks into open and secure (WPA2).

--- a/web/index.html
+++ b/web/index.html
@@ -18,6 +18,7 @@
   <script src="js/bootstrap.min.js"></script>
   <script src="https://unpkg.com/leaflet@1.0.1/dist/leaflet.js"></script>
   <script src="js/leaflet.markercluster.js"></script>
+  <script src="js/leaflet.featuregroup.subgroup.js"></script>
 
   <script src="wifimap.js"></script>
 </head>
