Add coverage layer.

--- a/web/index.html
+++ b/web/index.html
@@ -19,6 +19,8 @@
   <script src="https://unpkg.com/leaflet@1.0.1/dist/leaflet.js"></script>
   <script src="js/leaflet.markercluster.js"></script>
   <script src="js/leaflet.featuregroup.subgroup.js"></script>
+  <script src="js/QuadTree.js"></script>
+  <script src="js/L.GridLayer.MaskCanvas.js"></script>
 
   <script src="wifimap.js"></script>
 </head>
